# mao

backend/: .env.example  README.md  pyproject.toml
backend/mao/: __init__.py  main.py
backend/mao/api/v1/: callbacks.py  chat.py
backend/mao/api/v1/admin/: agents.py  audit.py  channel_accounts.py  cron_jobs.py  skills.py  workflows.py
backend/mao/channel/: base.py  dingtalk.py  dispatcher.py  feishu.py  wecom.py
backend/mao/core/: config.py  enums.py  kafka_client.py  redis_client.py  security.py
backend/mao/db/: database.py
backend/mao/db/models/: __init__.py  agent.py  channel.py  cron.py  message.py  session.py  skill.py  task.py  user.py  workflow.py
backend/mao/engine/: cron_scheduler.py  router.py  task_service.py
backend/mao/engine/dag/: runner.py
backend/mao/engine/react/: blackboard.py  runner.py  skill_executor.py  state_machine.py
backend/mao/services/: archiver.py  inbox_retrier.py
design/: README.md
design/00_prototypes/: README.md  api_reference_prototype.html  b_side_prototype.html  c_side_prototype.html  product_requirements.txt
design/01_overview/: product_overview.md
design/02_architecture/: design_review_report.md  diagrams_classes_enums.md  engineering_guide.md  system_architecture.md  tech_stack_analysis.md
design/03_data_model/: data_model.md
design/04_api/: api_reference.md
design/06_database/: schema.sql
design/07_data_consistency/: data_consistency.md
frontend/: README.md  design_frontend_review_2026-04-02.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
(+31 files in other folders)
